# ProseHaven

./: README.md
backend/: .gitignore  Dockerfile
backend/app/: README.md  main.py  pyproject.toml  requirements.txt  test.py
backend/app/api/v1/routers/: chapter.py  comment.py  forgot.py  health.py  login.py  populate_db.py  register.py  story.py  user.py
backend/app/core/: config.py  storage.py
backend/app/core/authentication/: auth_middleware.py  auth_token.py  email_verification.py  hashing.py
backend/app/schemas/: chapter.py  comment.py  error.py  story.py  token.py  user.py
backend/compose_file/: compose.yml
vite-project/: README.md  package-lock.json  package.json
vite-project/src/: App.css  App.jsx
vite-project/src/Components/: LibraryContext.jsx
vite-project/src/Components/AboutLP/: AboutLP.css  AboutLP.jsx
vite-project/src/Components/BestSellingBooks/: BestSellingBooks.css  BestSellingBooks.jsx
vite-project/src/Components/Brands/: Brands.css  Brands.jsx
vite-project/src/Components/ChapterForm/: ChapterForm.css  ChapterForm.jsx
vite-project/src/Components/ChapterList/: ChapterList.css  ChapterList.jsx
vite-project/src/Components/ContactLP/: ContactLP.css  ContactLP.jsx
vite-project/src/Components/Copyright/: Copyright.css  Copyright.jsx
vite-project/src/Components/FeatureBooks/: FeatureBooks.css  FeatureBooks.jsx
vite-project/src/Components/FeaturesLP/: FeaturesLP.css  FeaturesLP.jsx
vite-project/src/Data/: Data.js
vite-project/src/Pages/: Home.jsx
vite-project/src/Router/: Router.jsx
(+37 files in other folders)
